use sqlx, added user details
